--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
 									<div class="more-info">
 										<center>
-											<p class="lead"><img src="img/contact.PNG"></p>
+											<p class="lead"><img src="img/contact.png"></p>
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> TAMUCC, RFEB 316M</li>
