--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<div class="service-ico"><span class="ico-circle"><i class="ion-paintbrush"></i></span></div>
 						<div class="service-content">
 							<h2 class="s-title">Web Design</h2>
-							<p class="s-description text-center">HTML, CSS, ASP.NET</p>
+							<p class="s-description text-center">HTML, CSS, JavaScript, PHP, ASP.NET</p>
 						</div>
 					</div>
 				</div>
