--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 									<center>
 										<p class="lead">
 											<img src="img/profile.PNG">
+											<br> Agatha S Owora
 										</p>
 									</center>          
 								</div>
