--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<div class="title-box-2"><h5 class="title-left">Profile</h5></div>
 									<center>
 										<p class="lead">
-											<img src="img/profile.PNG">
+											<img src="img/contact.png">
 											<br> Agatha S Owora
 										</p>
 									</center>          
@@ -226,10 +226,10 @@
 									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
 									<div class="more-info">
 										<center>
-											<p class="lead"><img src="img/contact.png"></p>
+											<p class="lead"><img src="img/profile.PNG"></p>
 										</center>
 										<ul class="list-ico">
-											<li><span class="ion-ios-location"></span> UNOMAHA, PKI170</li>
+											<li><span class="ion-ios-location"></span> Uiversity of Nebraska Omaha, PKI 170</li>
 											<li><span class="ion-ios-telephone"></span> (402) 554-2380</li>
 											<li><span class="ion-email"></span> aowora@unomaha.edu</li>
 										</ul>
