--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="copyright-box">
-							<p class="copyright">Updated on 2/8/2021</p>
+							<p class="copyright">Last update: 2021</p>
 							<div class="credits">You are the light of the world. A town built on a hill cannot be hidden. (Matthew 5:14 - NIV)</div>
 						</div>
 					</div>
