--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 									<div class="title-box-2"><h5 class="title-left">Profile</h5></div>
 									<center>
 										<p class="lead">
-											<img src="img/contact.png">
-											<br> Agatha S Owora
+											<img src="img/profile.png">
 										</p>
 									</center>          
 								</div>
@@ -122,7 +121,8 @@
 										COSC 4343: Algorithms <br>
 									</p>									
 								</div>
-							</div> -->
+							</div> 
+							-->
 						</div>
 					</div>
 				</div>
@@ -226,7 +226,7 @@
 									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
 									<div class="more-info">
 										<center>
-											<p class="lead"><img src="img/profile.PNG"></p>
+											<p class="lead"><img src="img/contact1.png"></p>
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> Uiversity of Nebraska Omaha, PKI 170</li>
