--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<div class="title-box-2"><h5 class="title-left">Profile</h5></div>
 									<center>
 										<p class="lead">
-											<img src="img/profile.png">
+											<img src="img/profile.PNG">
 										</p>
 									</center>          
 								</div>
@@ -229,7 +229,8 @@
 											<p class="lead"><img src="img/contact1.png"></p>
 										</center>
 										<ul class="list-ico">
-											<li><span class="ion-ios-location"></span> Uiversity of Nebraska Omaha, PKI 170</li>
+											<li><span class="ion-ios-location"></span> University of Nebraska Omaha</li>
+											<li><span class="ion-ios-location"></span> Peter Kiewit Institute 170</li>
 											<li><span class="ion-ios-telephone"></span> (402) 554-2380</li>
 											<li><span class="ion-email"></span> aowora@unomaha.edu</li>
 										</ul>
