--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
 								<div class="about-me pt-4 pt-md-0">
 									<div class="title-box-2"><h5 class="title-left">About Me</h5></div>
 									<p class="lead">
-										Born and raised in Kampala, Uganda.
-									</p>
-									<p class="lead">
 										I have worked in industry and education.
 										In regards to industry, I have filled the
 										role of tech support, database administrator,
@@ -230,7 +227,7 @@
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> University of Nebraska Omaha</li>
-											<li><span class="ion-ios-location"></span> Peter Kiewit Institute 170</li>
+											<li><span class="ion-ios-location"></span> Peter Kiewit Institute rm:170</li>
 											<li><span class="ion-ios-telephone"></span> (402) 554-2380</li>
 											<li><span class="ion-email"></span> aowora@unomaha.edu</li>
 										</ul>
