Change color to red

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 						<div class="copyright-box">
 							<p class="copyright">Last update: 2021</p>
 							<div class="credits">You are the light of the world. A town built on a hill cannot be hidden. (Matthew 5:14 - NIV)</div>
+							<p style="font-size:160%;">Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></p>
 						</div>
 					</div>
 				</div>
