--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
 									<div class="more-info">
 										<center>
-											<div><p class="lead"><img src="img/contact1.png"></p></div>
+											<img src="img/contact1.png">
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> University of Nebraska Omaha</li>
