--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 								</div>
 								
 								<div class="col-md-6">
-									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
+									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch!</h5></div>
 									<div class="more-info">
 										<center>
 											<img src="img/contact1.png">
