--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 								</div>
 								
 								<div class="col-md-6">
-									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
+									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch!!</h5></div>
 									<div class="more-info">
 										<center>
-											<p class="lead"><img src="img/contact1.png"></p>
+											<p class="lead"><img style="max-width: 100%" src="img/contact1.png"></p>
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> University of Nebraska Omaha</li>
