--- a/index.html
+++ b/index.html
@@ -191,14 +191,14 @@
 									<div class="more-info">
 										<center>
 											<p class="lead">
-												<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2999.820048990804!2d-96.01868488457856!3d41.24747757927722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87938dad8e7d06ab%3A0xd0fd44a640e0f9e5!2sPeter%20Kiewit%20Institute!5e0!3m2!1sen!2sus!4v1612805325129!5m2!1sen!2sus" width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+												<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2999.820048990804!2d-96.01868488457856!3d41.24747757927722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87938dad8e7d06ab%3A0xd0fd44a640e0f9e5!2sPeter%20Kiewit%20Institute!5e0!3m2!1sen!2sus!4v1612805325129!5m2!1sen!2sus" width="500" height="400" frameborder="0" style="border:0;max-width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 											</p>
 										</center>
 									</div>
 								</div>
 								
 								<div class="col-md-6">
-									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch!!</h5></div>
+									<div class="title-box-2 pt-4 pt-md-0"><h5 class="title-left">Get in Touch</h5></div>
 									<div class="more-info">
 										<center>
 											<p class="lead"><img style="max-width: 100%" src="img/contact1.png"></p>
