--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 										</center>
 										<ul class="list-ico">
 											<li><span class="ion-ios-location"></span> University of Nebraska Omaha</li>
-											<li><span class="ion-ios-location"></span> Peter Kiewit Institute 170</li>
-											<li><span class="ion-ios-telephone"></span> 402-554-2380</li>
+											<li><span class="ion-ios-location"></span> Peter Kiewit Institute 285B</li>
+											<li><span class="ion-ios-telephone"></span> 402-554-2157</li>
 											<li><span class="ion-email"></span> aowora@unomaha.edu</li>
 										</ul>
 									</div>
