--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<p class="lead">
 										I have worked in industry and education.
 										In regards to industry, I have filled the
-										role of tech support, database administrator, data analyst
+										role of tech support, database administrator, data analyst,
 										and software developer.					
 									</p>
 									<p class="lead">
@@ -141,7 +141,7 @@
 						<div class="service-ico"><span class="ico-circle"><i class="ion-stats-bars"></i></span></div>
 						<div class="service-content">
 							<h2 class="s-title">Data Analysis</h2>
-							<p class="s-description text-center">R, MATLAB, SPSS, SQL, Tableau</p>
+							<p class="s-description text-center">Excel, SQL, Tableau, R, SPSS</p>
 						</div>
 					</div>
 				</div>
